--- a/style.css
+++ b/style.css
@@ -76,3 +76,7 @@
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
+
+/* .jumbotron {
+    background-color:transparent !important; 
+} */
