--- a/style.css
+++ b/style.css
@@ -80,3 +80,11 @@
 /* .jumbotron {
     background-color:transparent !important; 
 } */
+
+.lectures {
+    background-color: yellow;
+}
+
+.bla {
+    background-color: red;
+}
